--- a/style/Style.css
+++ b/style/Style.css
@@ -90,7 +90,8 @@ a:hover {
 .hero {
   position: relative;
   height: 100vh;
-  background: url("https://images.unsplash.com/photo-1456139333202-745e9029f0ef?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW91bnRhaW4lMjBhZHZlbnR1cmV8ZW58MHx8MHx8fDA%3D") no-repeat center center/cover;
+  background: url("https://thumbs.dreamstime.com/b/travel-essentials-including-passport-camera-map-luggage-adventure-planning-stylish-flat-lay-light-wooden-surface-381056280.jpg") no-repeat center center/cover;
+  /* background: url("https://images.unsplash.com/photo-1456139333202-745e9029f0ef?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW91bnRhaW4lMjBhZHZlbnR1cmV8ZW58MHx8MHx8fDA%3D") no-repeat center center/cover; */
   background-attachment: fixed;
   display: flex;
   align-items: center;
